systemtap-data-in_another_cu.patch

Fix for issue 6977 http://sourceware.org/bugzilla/show_bug.cgi?id=6977.
We found it is very annoying and limiting for script writers, so we
fixed it. It deals with  situation of accessing global variables that
are defined in *other* compilation units.